--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
-    <meta property="og:title" content="SkillEdge - Peer Learning Platform" />
+    <meta property="og:title" content="SkillBridge - Peer Learning Platform" />
     <meta property="og:description" content="Collaborate. Learn. Grow. - Peer-to-peer learning simplified." />
     <meta property="og:type" content="website" />
   </head>
