--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SkillEdge - Peer Learning Platform</title>
+    <title>SkillBridge - Peer Learning Platform</title>
     <meta name="description" content="Collaborate. Learn. Grow. - Peer-to-peer learning simplified." />
     <meta name="author" content="SkillEdge" />
 
